# TAG_SERVICE_TM

./: CMakeLists.txt  README.md  install.sh  main.c  tag_lib.h  unistall.sh
cmake/: FindKernelHeaders.cmake
documentation/: Relazione progetto SOA.docx
systbl_hack/: systbl_hack.h  systbl_hack_main.c  systbl_hack_service.c
systbl_hack/memory-mapper/: virtual-to-phisical-memory-mapper.c
tag_service/: Makefile  tag.c  tag.h  tag_flags.h  tag_main.c  tag_service.c
tag_service/device-driver/: tag_dev.c  tag_dev.h
tag_service/systbl_hack/: Makefile  systbl_hack.h  systbl_hack_main.c  systbl_hack_service.c
tag_service/systbl_hack/memory-mapper/: virtual-to-phisical-memory-mapper.c  virtual-to-phisical-memory-mapper.h
user/: awake.c  remove.c  tag-interface.c  tag-interface.h  user-1.c  user1.c  user2.c
user/binaries/: awaker  remover  user1  user2
